--- a/CadastroVendas/Views/Home/Index.cshtml
+++ b/CadastroVendas/Views/Home/Index.cshtml
@@ -1,8 +1,59 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <div class="text-center">
+        <h1>Sistemas de cadastro de Vendas</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        <form>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Nunca compartilharemos seu email com ninguém.</div>
+                </div>
+                <div class="col-md-6">
+                    <label for="exampleInputPassword1" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Logar</button>
+        </form>
+
+        <div class="row">
+            <div class="col-md-6">
+                <a href='https://localhost:7092/ADMs/Create'><button type="button" class="btn btn-warning">Novo Cadastro ADM</button></a>
+            </div>
+            <div class="col-md-6">
+                <a href="https://localhost:7092/funcionarios/Create"><button type="button" class="btn btn-success">Novo cadastro Funcionário</button></a>
+            </div>
+        </div>
+
+
+    </div>
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
+
