Personalizacao da pag Produto

--- a/CadastroVendas/Views/Home/Index.cshtml
+++ b/CadastroVendas/Views/Home/Index.cshtml
@@ -25,7 +25,13 @@
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Logar</button>
+
+              <button type="submit" class="btn btn-primary">Logar</button>
+
+            <div class="text-center">
+                <br>
+                <a href="https://localhost:7092/Usuarios/Create"><button type="button" class="btn btn-warning">Cadastrar novo usuário</button></a>
+            </div>
         </form>
     </div>
 
