Atualizacoes dos botoes

--- a/CadastroVendas/Views/Usuarios/Index.cshtml
+++ b/CadastroVendas/Views/Usuarios/Index.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+<h1>Lista de Usuários</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-warning"><i class="bi bi-plus-square"></i> Adicionar Novo Usuário</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +51,9 @@
                 @Html.DisplayFor(modelItem => item.nivelAcesso)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.UsuarioID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UsuarioID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UsuarioID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.UsuarioID" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.UsuarioID" class="btn btn-secondary"><i class="bi bi-card-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.UsuarioID" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
             </td>
         </tr>
 }
