--- a/CadastroVendas/Views/Vendas/Edit.cshtml
+++ b/CadastroVendas/Views/Vendas/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+
+
+<h1>Editar</h1>
 
 <h4>Venda</h4>
 <hr />
@@ -51,7 +53,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-success">Voltar ao Histórico</a>
 </div>
 
 @section Scripts {
