--- a/CadastroVendas/Views/Produtoes/Create.cshtml
+++ b/CadastroVendas/Views/Produtoes/Create.cshtml
@@ -44,7 +44,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-success">Voltar ao histórico</a>
     </div>
 
 
