--- a/CadastroVendas/Views/Produtoes/Details.cshtml
+++ b/CadastroVendas/Views/Produtoes/Details.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<h1>Detalhes</h1>
 
 <div>
     <h4>Produto</h4>
@@ -31,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProdutoID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ProdutoID" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a> |
+    <a asp-action="Index" class="btn btn-success" >Voltar ao histórico</a>
 </div>
