--- a/CadastroVendas/Views/Produtoes/Edit.cshtml
+++ b/CadastroVendas/Views/Produtoes/Edit.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+
+<h1>Editar</h1>
 
 <h4>Produto</h4>
 <hr />
@@ -36,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-success">Voltar ao histórico</a>
 </div>
 
 @section Scripts {
