--- a/CadastroVendas/Views/Usuarios/Create.cshtml
+++ b/CadastroVendas/Views/Usuarios/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Usuario</h4>
 <hr />
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-success">Voltar ao histórico</a>
 </div>
 
 @section Scripts {
