--- a/CadastroVendas/Views/Vendas/Create.cshtml
+++ b/CadastroVendas/Views/Vendas/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Adicionar</h1>
 
 <h4>Venda</h4>
 <hr />
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-success">Voltar ao histórico</a>
 </div>
 
 @section Scripts {
