--- a/CadastroVendas/Views/Vendas/Index.cshtml
+++ b/CadastroVendas/Views/Vendas/Index.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<h1>Histórico de Vendas</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-warning"><i class="bi bi-plus-square"></i> Adicionar Nova Venda</a>
 </p>
 <table class="table">
     <thead>
@@ -55,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.valorUnidade)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.VendaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.VendaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.VendaId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.VendaId" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.VendaId" class="btn btn-secondary"><i class="bi bi-card-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.VendaId" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
             </td>
         </tr>
 }
