--- a/CadastroVendas/Views/Home/LogadoTemp.cshtml
+++ b/CadastroVendas/Views/Home/LogadoTemp.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "";
 }
-<h1>@ViewData["Title"]</h1>
+
 
 <h1>Usuário logado -> Será exibido aqui as funções autorizadas realizadas pelo Gerente e as autorizadas pelo Funcionário</h1>
