--- a/CadastroVendas/Views/Shared/_Layout.cshtml
+++ b/CadastroVendas/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vendas" asp-action="Index">Vendas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários Cadastrados</a>
+                        </li>
                     </ul>
                 </div>
             </div>
